--- a/Lesson6-decoraotrs-generators.ipynb
+++ b/Lesson6-decoraotrs-generators.ipynb
@@ -774,16 +774,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "datetime.datetime(2022, 9, 12, 19, 45, 15, 31196)"
+       "datetime.datetime(2022, 9, 23, 7, 44, 27, 507711)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -795,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1969,7 +1969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1982,7 +1982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1997,7 +1997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -2128,6 +2128,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
   }
  },
  "nbformat": 4,
