почти готовое задание

--- a/Date and time/Без названия.ipynb
+++ b/Date and time/Без названия.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c3a76a2",
+   "id": "9b45b683",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "763b8d2f",
+   "id": "fedacd36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d46db0e",
+   "id": "7158c1f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad4d0427",
+   "id": "57302e81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e603177",
+   "id": "2c1cf984",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "847649d3",
+   "id": "d92db1ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95c39702",
+   "id": "b2ce782d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9b53a82",
+   "id": "f0e334b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52f060c5",
+   "id": "7b923caa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7613f906",
+   "id": "e996e766",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8077295",
+   "id": "dd5e933a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99236889",
+   "id": "48a34ef0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "309245c3",
+   "id": "2adaece0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2931c314",
+   "id": "60eee08c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a19d6c9",
+   "id": "183a0c69",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -298,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26fd4eaf",
+   "id": "fd15d356",
    "metadata": {
     "scrolled": true
    },
@@ -330,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34ce951e",
+   "id": "0a518c0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "566c3ee0",
+   "id": "a6cd554c",
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4dcf45ce",
+   "id": "20540180",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b72e88a1",
+   "id": "6f8e47cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10ae33d8",
+   "id": "58f2a1f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c56de7fd",
+   "id": "db9ccd1a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a6a60f8",
+   "id": "7f26fca5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "af68bc1f",
+   "id": "f60c848e",
    "metadata": {},
    "outputs": [
     {
@@ -720,8 +720,86 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "id": "f599b979",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    \n",
+      " X  \n",
+      "    \n",
+      " X  \n",
+      "    \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(*n_u, sep=\"\\n\", end=\"\\n\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "0425367b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 2, 3, 4, 5]]\n",
+      "[[1, 2, 3, 4, 5], [2, 3, 4, 5, 1]]\n",
+      "[[1, 2, 3, 4, 5], [2, 3, 4, 5, 1], [3, 4, 5, 1, 2]]\n",
+      "[[1, 2, 3, 4, 5], [2, 3, 4, 5, 1], [3, 4, 5, 1, 2], [4, 5, 1, 2, 3]]\n",
+      "[[1, 2, 3, 4, 5], [2, 3, 4, 5, 1], [3, 4, 5, 1, 2], [4, 5, 1, 2, 3], [5, 1, 2, 3, 4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=[1,2,3,4,5]\n",
+    "x=[]\n",
+    "for i in range(len(a)):\n",
+    "    x.append(a.copy())\n",
+    "    a.append(a.pop(0))\n",
+    "    print(x) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "0445db6d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u0015FD\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = '\\25FD'\n",
+    "\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "4040580d",
+   "id": "3d70c911",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97edcdc6",
    "metadata": {},
    "outputs": [],
    "source": []
