--- a/Lesson5-files.ipynb
+++ b/Lesson5-files.ipynb
@@ -1917,7 +1917,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    " b = '\\u1E69'"
+    " b = '2B1C'"
    ]
   },
   {
@@ -1942,22 +1942,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'⬛'"
+       "'⬜'"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "'\\u2B1B'"
+    "'\\u2B1C'"
    ]
   },
   {
@@ -2002,22 +2002,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'ṩ'"
-      ]
-     },
-     "execution_count": 108,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['⬜⬜⬜', '⬜⬜⬜', '⬜⬜⬜']\n"
+     ]
     }
    ],
    "source": [
-    "b"
+    "b = ['⬜⬜⬜',\n",
+    "    '⬜⬜⬜',\n",
+    "    '⬜⬜⬜']\n",
+    "print(b)"
    ]
   },
   {
@@ -2119,7 +2119,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
